# agentpack

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  deny.toml  dist-workspace.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-crates.yml  release.yml  scorecard.yml
docs/: ARCHITECTURE.md  Agentpack_Roadmap_Spec_Epics_Backlog_CodexReady_v0.6.md  Agentpack_Spec_Epics_Backlog_CodexReady.md  BACKLOG.md  BOOTSTRAP.md  CLI.md  CODEX_EXEC_PLAN.md  CODEX_WORKPLAN.md  CONFIG.md  CONTRIBUTING_SPECS.md  DESIGN_REVIEW.md  ERROR_CODES.md  EVOLVE.md  GITHUB_SETUP.md  GOVERNANCE.md  JSON_API.md  MCP.md  OVERLAYS.md  PRD.md  QUICKSTART.md  README.md  RELEASING.md  SECURITY_CHECKS.md  SPEC.md  TARGETS.md  TARGET_CONFORMANCE.md  TARGET_MAPPING_TEMPLATE.md  TARGET_SDK.md  TROUBLESHOOTING.md  TUI.md  WORKFLOWS.md  index.md
docs/adr/: 0001-json-contract-stability.md  0002-patch-overlays-design.md  0003-mcp-confirm-token.md
docs/assets/: README.md  demo.tape
docs/dev/: agentpack_unified_iteration_plan.md  codex.md  roadmap.md
docs/explanation/: architecture.md  compare-dotfiles-managers.md  overlays.md
docs/howto/: bootstrap.md  evolve.md  mcp.md  overlays-create-sparse-materialize-rebase.md  workflows.md
docs/reference/: cli.md  config.md  error-codes.md  json-api.md  targets.md
docs/targets/: export_dir.md
docs/tutorials/: demo-5min.md  quickstart.md
docs/v2/: ARCHITECTURE.md  BACKLOG.md  OPERATIONS.md  README.md  SPEC.md
docs/v3/: BACKLOG.md  PRD.md  README.md  SPEC.md
docs/zh-CN/: BOOTSTRAP.md  CLI.md  CONFIG.md  EVOLVE.md  OVERLAYS.md  QUICKSTART.md  README.md  TARGETS.md  TROUBLESHOOTING.md  (+2 more)
openspec/: project.md
scripts/: demo_5min.ps1  demo_5min.sh
src/: apply.rs  cli.rs  config.rs  deploy.rs  diff.rs  docs.rs  engine.rs  events.rs  fs.rs  git.rs  hash.rs  ids.rs  lib.rs  lockfile.rs  machine.rs  main.rs  markers.rs  mcp.rs  output.rs  overlay.rs  paths.rs  policy.rs  policy_allowlist.rs  policy_pack.rs  project.rs  roots.rs  source.rs  state.rs  store.rs  target_adapters.rs  target_manifest.rs  target_registry.rs  target_selection.rs  targets.rs  tui_apply.rs  tui_core.rs  user_error.rs  validate.rs
tests/: cli_bootstrap_claude_skill.rs  cli_demo_5min_script.rs  cli_deploy_adopt_confirmation.rs  cli_deploy_claude_skill.rs  cli_desired_state_conflict.rs  cli_doctor_gitignore.rs  cli_doctor_overlay_layout.rs  cli_error_codes.rs  cli_error_codes_doc_sync.rs  cli_evolve_propose_creates_branch.rs  cli_evolve_propose_git_repo_required.rs  cli_evolve_propose_git_worktree_dirty.rs  cli_evolve_propose_marked_instructions.rs  cli_evolve_propose_skipped.rs  cli_evolve_restore.rs  cli_examples_minimal_repo.rs  cli_git_not_found.rs  cli_guardrails.rs  cli_help_schema.rs  cli_import.rs  cli_init_bootstrap.rs  cli_init_git.rs  cli_init_guided.rs  cli_json_command_metadata.rs  cli_json_golden.rs  cli_json_golden_core_commands.rs  cli_json_golden_policy.rs  cli_manifest_forward_compat.rs  cli_org_config_isolation.rs  cli_overlay_baseline_errors.rs  cli_overlay_edit_patch_kind.rs  cli_overlay_edit_windows_paths.rs  cli_overlay_fs_key.rs  cli_overlay_path.rs  cli_overlay_rebase_conflicts.rs  cli_patch_overlay_rebase.rs  cli_patch_overlays_apply.rs  cli_patch_overlays_doc_sync.rs  cli_policy_audit.rs  cli_policy_lint.rs  (+42 more)
(+909 files in other folders)
