[package]
name = "agentpack"
version = "0.6.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["liqiongyu <li@libiao.co>"]
description = "AI-first local asset control plane for Codex/Claude tooling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/liqiongyu/agentpack"
keywords = ["ai", "cli", "developer-tools", "codex", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.65"
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"], optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
hex = "0.4.3"
walkdir = "2.5.0"
tempfile = "3.20.0"
time = { version = "0.3.41", features = ["formatting", "macros"] }
dirs = "6.0.0"
similar = "2.7.0"
rmcp = { version = "0.11.0", features = ["transport-io"] }
schemars = "1.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }

[features]
default = ["target-codex", "target-claude-code", "target-cursor", "target-vscode"]
tui = ["dep:crossterm", "dep:ratatui"]
target-codex = []
target-claude-code = []
target-cursor = []
target-vscode = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
