[package]
name = "agentpack"
version = "0.9.1"
edition = "2024"
rust-version = "1.88.0"
authors = ["liqiongyu <li@libiao.co>"]
description = "AI-first local asset control plane for Codex/Claude tooling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/liqiongyu/agentpack"
keywords = ["ai", "cli", "developer-tools", "codex", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.65"
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"], optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
hex = "0.4.3"
getrandom = "0.3.4"
walkdir = "2.5.0"
tempfile = "3.20.0"
time = { version = "0.3.45", features = ["formatting", "macros"] }
dirs = "6.0.0"
similar = "2.7.0"
rmcp = { version = "0.14.0", features = ["transport-io"] }
schemars = "1.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }

[features]
default = [
  "target-codex",
  "target-claude-code",
  "target-cursor",
  "target-vscode",
  "target-jetbrains",
  "target-zed",
]
tui = ["dep:crossterm", "dep:ratatui"]
target-codex = []
target-claude-code = []
target-cursor = []
target-vscode = []
target-jetbrains = []
target-zed = []
target-export-dir = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
